@@ -1,3 +1,8 @@
+2008-09-28   <> 
+
+	* Config/FrontendConfig.cs: Implemented SSH tunnel support. (closes trac
+	  ticket #64)
+
 2008-09-23   <> 
 
 	* FrontendManager.cs: Replaced poor mans Queue in FrontendManager with
